# foryu

./: .gitignore  LICENSE  README.md
pipeline/: build_vocab.py  pyproject.toml
web/: pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Footer.tsx  Hero.tsx  Methodology.tsx  SimilarityLookup.tsx  SimilarityResultCard.tsx
web/lib/: data.ts
web/public/: stats.json  vocab.json
