[project]
name = "foryu-pipeline"
version = "0.1.0"
description = "Build the IDF vocab for foryu.me's live HF recommender"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
